# cpp_vscodium_template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  cpp_template
include/core/: core.h
include/test/: include_example.h
src/: main.cpp
src/core/: core.cpp
